deploy/production/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: howto
  labels:
    app.kubernetes.io/name: howto
    app.kubernetes.io/part-of: howto
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: howto
  template:
    metadata:
      labels:
        app.kubernetes.io/name: howto
        app.kubernetes.io/part-of: howto
    spec:
      imagePullSecrets:
        - name: harbor-regcred
      containers:
        - name: howto
          image: registry.timolia.systems/web/howto:main-4d9e6bc-1791101373 # {"$imagepolicy": "web-live:howto"}
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /
              port: http
          livenessProbe:
            httpGet:
              path: /
              port: http
