deploy/production/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: howto
  labels:
    app.kubernetes.io/name: howto
    app.kubernetes.io/part-of: howto
spec:
  selector:
    app.kubernetes.io/name: howto
  ports:
    - name: http
      port: 80
      targetPort: http
