deploy/production/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: howto
  labels:
    app.kubernetes.io/name: howto
    app.kubernetes.io/part-of: howto
spec:
  hostnames:
    - howto.timolia.de
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: timolia-gateway
      namespace: envoy-gateway-system
      sectionName: https
  rules:
    - backendRefs:
        - name: howto
          port: 80
